--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "dependencies": {
     "apisauce": "^0.14.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "react-svg": "^2.2.13"
   }
 }
