--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "babel-preset-stage-1": "^6.16.0",
     "better-npm-run": "0.0.13",
     "css-loader": "^0.28.4",
-    "emotion": "^7.0.13",
     "eslint": "^3.1.1",
+    "emotion": "^7.0.13",
     "eslint-config-standard": "^5.3.5",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-react": "^5.2.2",
@@ -63,20 +63,16 @@
     "react-dom": "^15.2.1",
     "react-json-tree": "^0.10.0",
     "react-redux": "^4.4.5",
-    "react-router": "4.0.0-2",
     "redux": "^3.5.2",
-    "redux-immutable": "^3.0.8",
-    "redux-little-router": "^13.1.3",
     "redux-logger": "^2.6.1",
     "redux-saga": "^0.11.0",
-    "react-router-redux": "^5.0.0-alpha.6",
+    "redux-little-router": "^13.1.3",
     "reduxsauce": "^0.5.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^2.1.0-beta.27",
     "webpack-dashboard": "^0.2.0",
-    "webpack-dev-server": "^2.1.0-beta.10",
-    "whatwg-fetch": "^1.0.0"
+    "webpack-dev-server": "^2.1.0-beta.10"
   },
   "dependencies": {
     "apisauce": "^0.14.1",
